--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -248,7 +248,7 @@
   "NumberOfGenerationsDesc": "Affiche le nombre de générations, terminées ou non",
   "NumberOfTokens": "Nb de tokens",
   "NumberOfTokensDesc": "Affiche le nombre de tokens",
-  "BePatient": "Le premier chargement de l'application peut prendre jusqu'à 30 s. mais les prochains seront quasi instantanés. Merci de patienter.",
+  "BePatient": "Le premier chargement de l'application peut prendre jusqu'à 30 s. Merci de patienter.",
   "YourActivity": "Votre activité",
   "YourActivityDesc": "Affiche le nombre de générations et de tokens en fonction du temps",
   "YourActivityFooter": " ",
@@ -270,6 +270,9 @@
   "MakeLonger": "Faire plus long",
   "BeMoreSpecific": "Être plus spécifique",
   "GoToDiscussion": "Allez voir la discussion suivante et dites-nous comment vous utiliseriez cette fonctionnalité :",
+  "Context": "Contexte",
+  "Assistants": "Assistants",
+  "Contents": "Contenus",
 
   "Stop": "Stop"
 
