--- a/docs/docs/getting_started/overview.mdx
+++ b/docs/docs/getting_started/overview.mdx
@@ -1,6 +1,5 @@
 ---
-slug: /
-id: getting-started
+id: gs-overview
 title: Getting Started
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
