Fix(#28): Doc refactoring

--- a/docs/docs/getting_started/expert-configures-AI.mdx
+++ b/docs/docs/getting_started/expert-configures-AI.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-expert-configures-AI
-title: configure AI (define keys)
+title: Configure AI (define keys)
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to setup AI configuration
