--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /
 id: overview
-title: Présentation
+title: Introduction
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: Here is an overview of what can Veep do for you
@@ -16,9 +16,49 @@ last_update:
   author: Jean-Christophe Kermagoret
 ---
 
+# Veep.AI is an Education and Execution Platform for AI
+
+:::info
+Veep is for people who believe that AI increases productivity so much that not using it is unimaginable.
+:::
+
+<Columns> 
+  <Column className='col--4 text--left'>
+    Veep is intended for 2 types of people:
+    * AI experts who teaches and deploys AI in companies, whatever their size, AI increasing productivity in all cases
+    * AI users who want and need to learn AI in their company department context or for personal reasons
+
+    **AI users may be:**
+    * AI learners
+    * AI employees, whatever their departments
+    * AI managers
+
+    **AI experts may be:**
+    * AI teachers
+    * AI prompters or AI engineers
+    * AI consultants in AI service providers or AI consulting services
+    * AI indies
+  </Column>
+  <Column className='vertical-align--center text--left'>
 import Image from '@theme/IdealImage'
-import thumbnail from './overview/veep-schema-architecture-2.0-en.png'
 
-<Image alt="Veep Architecture Overview" img={thumbnail} />
+<Image alt="Veep Architecture Overview" img={require('./overview/veep-schema-architecture-2.0-en.png')} />
+  </Column>
+</Columns>
 
-Veep is an Education and Execution Platform.
+:::tip
+Usually, with Veep, AI experts teaches on Veep so AI learners, at the end of their training program, have a platform ready to use they can improve. Usually, they continue with thier teach who helps them inject AI in all departements, one by one. 
+:::
+
+## Veep schema
+
+As you can see in the schema below, Veep is composed of 6 main parts: 
+
+* Specification
+* Configuration
+* Execution
+* Edition
+* Publication
+* Monitoring
+
+According your role, AI expert or AI user, these parts are interpreted differently. You'll find more information in the [What's Veep part](app/part-overview).
