--- a/docs/i18n/fr/docusaurus-plugin-content-docs/current/quick-start.mdx
+++ b/docs/i18n/fr/docusaurus-plugin-content-docs/current/quick-start.mdx
@@ -1,6 +1,6 @@
 ---
-id: gs-overview
-title: Getting Started
+id: gs-quickstart
+title: Quick Start
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to start
