Fix(#13): Doc refactoring

--- a/docs/docs/getting_started/expert-configures-pdf-export.mdx
+++ b/docs/docs/getting_started/expert-configures-pdf-export.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-expert-configures-pdf-export
-title: Configure PDF Export
+title: 5.a Configure PDF Export
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to configure PDF export, from background colors or font style to logo, header and footer?
