--- a/docs/docs/getting_started/expert-creates-assistant.mdx
+++ b/docs/docs/getting_started/expert-creates-assistant.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-expert-creates-assistant
-title: Create an Assistant
+title: 2.a Create an Assistant
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to start
