--- a/docs/docs/getting_started/expert-defines-context.mdx
+++ b/docs/docs/getting_started/expert-defines-context.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-expert-defines-context
-title: Define Context Elements
+title: 1. Define Context Elements
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to define your own context with your own specifications
