--- a/docs/docs/getting_started/user-edits-content.mdx
+++ b/docs/docs/getting_started/user-edits-content.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-user-edits-content
-title: Edit Generated Artefact
+title: 4. Edit Generated Artefact
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to edit my generated content a document
@@ -36,9 +36,15 @@ From the artefacts list, click on the one you want to edit. You can:
 * search for content in the information contained in the table
 * select a category to restrict artefacts list (to do #?)
 
-A window opens with, on the left the discussion with the AI that gives the artefacts, and on the right, the elements that have been agregated to produce the result.
+### Edit artefact
 
-You can then edit this result. Once you're done, don't forget to save it.
+Aftre clicking on an artefact, a window opens with:
+* on the left: the discussion with the AI that gives the artefacts
+* on the right, the elements that have been agregated to produce the result. It is your actual content or document.
+
+You can then edit this result. Goal is to focus:
+* on structure (heading 1...): it is the reason why only bold, italic and underline features are available. Once you're done, don't forget to save it. Don't expect to find styles at this place.
+* text: reread text, remove redundancy, rephrase to exactly match your needs. You can sometimes have some help with AI and ask to reduce, expand, simplify... You can also use assistant from your catalog if they have been to do so.
 
 ## Video
 
