--- a/docs/docs/getting_started/user-prepares-input.mdx
+++ b/docs/docs/getting_started/user-prepares-input.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-user-prepares-input
-title: Prepare Input
+title: 2.b Prepare Input
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to prepare input in order to have the best possible generation ?
@@ -21,8 +21,6 @@ last_update:
 ## Steps
 
 * Give some input
-* Generate
-* Continue
 
 ## Details
 
@@ -36,30 +34,16 @@ For the moment, the following input are available:
 1. URL, html website, not in javascript (like webflow...), and only one at a time for the moment
 
 :::tip
-
 My favorite input type is the voice because it's easy and authentic, recorded on my smartphone. I can use it later and recording is robust. No risk to lose your 10 min discussion with yourself ;-)  
-
 :::
 
 :::warning
-
 If your content is big, processing may take some time. For example, to process video/audio files of 3 min length, which is not that bad (you'll see :-) takes about 1 min processing. So be patient.
-
 :::
 
 :::info
-
 It is possible to go quicker, in real-time and in local, all at once, which is good for XP and confidentiality :-) Unfortunately, it's really more expensive because you need a GPU.
-
 :::
-
-### Generate
-
-After you give some input, click on Go. Then you can see a window with the set of steps for the veeplet you chose and the progression of the generation. Each a time a step is finished, a red bullet appears next to it.
-
-### Continue
-
-Generally, a continue button appears after that. Click on it to just continue. This button is set up because in a near future, you'll be able to fix and correct the text so next generations take into account your updates, to avoir bad context for future generations.
 
 ## Video
 
