--- a/docs/docs/getting_started/user-publishes-content.mdx
+++ b/docs/docs/getting_started/user-publishes-content.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-user-publishes-content
-title: Publish Artefact
+title: 5.b Publish Artefact
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to publish your generated artefact, either content or document, to PDF, web, social networks...
