--- a/docs/docs/getting_started/expert-configures-publication.mdx
+++ b/docs/docs/getting_started/expert-configures-publication.mdx
@@ -1,32 +1,28 @@
 ---
-id: gs-expert-creates-catalog
-title: 2.b Create a Catalog
+id: gs-expert-configures-publication
+title: 5.b Configure Publication
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
-description: How to create your catalog with your own veelpet to achieve your  specialized business goals
+description: How to configure PDF export, from background colors or font style to logo, header and footer?
 keywords:
   - expert
-  - veeplet
-  - catalog
-tags: [catalog]
+  - pdf
+  - background
+  - font-style
+tags: [export, pdf]
 #image: https://i.imgur.com/mErPwqL.png
 last_update:
   date: 10/28/2024
   author: Jean-Christophe Kermagoret
 ---
 
-# Create My Catalog
+# As an Expert, Configure Publication
 
 ## Steps
 
-
-
 ## Details
-
-
 
 ## Video
 
-
-## Screenshot
+## Screnshots
 
