--- a/docs/docs/getting_started/user-quick-start.mdx
+++ b/docs/docs/getting_started/user-quick-start.mdx
@@ -1,9 +1,9 @@
 ---
-id: gs-quickstart
-title: Quick Start
+id: gs-user-quickstart
+title: User Quick Start
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
-description: How to start
+description: What can Veep do for you in 5 minutes ?
 keywords:
   - start
 tags: [start]
@@ -15,15 +15,13 @@ last_update:
 
 # Introduction
 
+Veep.AI gives you access to a set of AI assistants for each department of your company, through a guided application easy to use, to increase your productivity in each direction.
+
 Discover **Veep.AI in less than 5 minutes**.
 
 ## Getting Started
 
 Go to https://app.veep.ai and log in using your Google account.
-
-## Account Creation
-
-With Veep.AI, logging in with your Google account is enough to create an account.
 
 ## Dashboard
 
@@ -70,9 +68,9 @@ Depending on the chosen veeplet, the content might include:
 
 At the end of the execution of the veeplet, items are accessed via the "My Content" menu where they can be modified and saved for later use.
 
-## Library
+## AI Assistants' Catalog
 
-You can browse the list of available veeplets. A veeplet is a sequence of instructions that allows you to create content or a document in one or more steps.
+You can browse the list of available AI assistants (veeplets). A veeplet is a sequence of instructions that allows you to create content or a document in one or more steps.
 
 Veeplets are categorized into categories and subcategories. For example:
 * Communication/marketing: you will find veeplets that allow creating LinkedIn posts or blog articles
@@ -80,13 +78,9 @@ Veeplets are categorized into categories and subcategories. For example:
 
 To use a veeplet, simply click on Go!
 
-## Creating a Veeplet
+## Customizing/Creating a Veeplet
 
-If you want to tailor a veeplet to your needs, you must customize it, which will result in it being copied to your workspace.
-
-When you are on a veeplet and click on Customize, a form opens with all the information characterizing it. If you click OK and then Save without any changes, the veeplet will be copied as is into your workspace. It will therefore appear in the same category, with exactly the same titles, summaries...
-
-Feel free to change the name, title, summary, and category of the veeplet. You can later configure the AI-provided instructions to personalize the content and document generation.
+If you feel brave, just go and follow the expert journey. Or <a href="contact\@veep.ai">ask us</a> to put you in touch with our most capable AI Expert for you.
 
 ## My Content
 
