--- a/docs/docs/getting_started/user-selects-generator.mdx
+++ b/docs/docs/getting_started/user-selects-generator.mdx
@@ -1,6 +1,6 @@
 ---
 id: gs-user-selects-generator
-title: Select Generator In Catalog
+title: 2.a Select Generator In Catalog
 hide_table_of_contents: false
 #custom_edit_url: https://github.com/facebook/docusaurus/edit/main/docs/api-doc-markdown.md
 description: How to generate new artefacts (content, document...) wtih AI?
