--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -22,27 +22,40 @@ last_update:
 Veep is for people who believe that AI increases productivity so much that not using it is unimaginable.
 :::
 
-<Columns> 
-  <Column className='col--4 text--left'>
-    Veep is intended for 2 types of people:
-    * AI experts who teaches and deploys AI in companies, whatever their size, AI increasing productivity in all cases
-    * AI users who want and need to learn AI in their company department context or for personal reasons
+## Teaser
+<center>
+<iframe width="800" height="448" title="YouTube video player"
+  src="https://www.youtube.com/embed/e6Zw30R8CWU?si=LNRzUtEzPjf_5oAE"
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
+</center>
 
+## AI Audience
+
+:::info
+Veep is intended for 2 types of people:
+* AI experts who teaches and deploys AI in companies, whatever their size, AI increasing productivity in all cases
+* AI users who want and need to learn AI in their company department context or for personal reasons
+:::
+
+<Columns> 
+  <Column className='text--left'>
+### AI Users
     **AI users may be:**
     * AI learners
     * AI employees, whatever their departments
     * AI managers
+  </Column>
+  <Column className='vertical-align--center text--left'>
 
+### AI Experts
     **AI experts may be:**
     * AI teachers
     * AI prompters or AI engineers
     * AI consultants in AI service providers or AI consulting services
     * AI indies
-  </Column>
-  <Column className='vertical-align--center text--left'>
-import Image from '@theme/IdealImage'
 
-<Image alt="Veep Architecture Overview" img={require('./overview/veep-schema-architecture-2.0-en.png')} />
   </Column>
 </Columns>
 
@@ -50,9 +63,17 @@ import Image from '@theme/IdealImage'
 Usually, with Veep, AI experts teaches on Veep so AI learners, at the end of their training program, have a platform ready to use they can improve. Usually, they continue with thier teach who helps them inject AI in all departements, one by one. 
 :::
 
-## Veep schema
+## Veep Architecture
 
-As you can see in the schema below, Veep is composed of 6 main parts: 
+<div class="zoom">
+
+import Image from '@theme/IdealImage'
+
+<Image alt="Veep Architecture Overview" img={require('./overview/veep-schema-architecture-2.0-en.png')} />
+
+</div>
+
+Veep is composed of 6 main parts: 
 
 * Specification
 * Configuration
