Fix(#45): Main content menu on the left is now built with json data. It's the same for everybody for the moment.

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -290,6 +290,12 @@
   "Production": "Production",
   "R&D": "R&D",
 
+  "NextBtnText": "Next",
+  "PrevBtnText": "Previous",
+  "DoneBtnText": "Done",
+
+  "Of": "of",
+
   "Stop": "Stop"
 
 }
