--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -270,18 +270,20 @@
   "MakeLonger": "Faire plus long",
   "BeMoreSpecific": "Être plus spécifique",
   "GoToDiscussion": "Allez voir la discussion suivante et dites-nous comment vous utiliseriez cette fonctionnalité :",
-  "Context": "Contexte",
+  "Context": "Contexte (beta)",
   "Assistants": "Assistants",
   "AIAssistants": "Assistants IA",
   "Contents": "Contenus",
 
   "ProductionFunction": "Fonctions Production",
+  "ProductionConsultingServicesFunction": "Fonctions Prod./Cons./Serv.",
   "SalesFunction": "Fonctions Ventes",
   "SupportFunction": "Fonctions Support",
 
   "CreateAssistant": "Créer un assistant",
   "CreateContent": "Créer un contenu",
   "MyDigitalTwin": "Mon jumeau digital",
+  
   "Communication": "Communication",
   "Finance": "Finance",
   "HR": "RH",
@@ -290,7 +292,10 @@
   "Marketing": "Marketing",
   "Procurement": "Appro.",
   "Production": "Production",
-  "R&D": "R&D",
+  "Consulting": "Consulting",
+  "Service": "Service",
+  "Services": "Services",
+  "RandD": "R&D",
 
   "NextBtnText": "Suivant",
   "PrevBtnText": "Précédent",
