Fix(#45): Minor : Dynamic menus also apply on Generic(Start)Menu

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -156,7 +156,8 @@
   "EnterText": "Enter text",
   "EnterUrl": "Enter URL to visit",
   "ChooseFile": "Choose file to transcribe",
-  "RecentActivity": "Recent activity",
+  "RecentActivities": "Recent activities",
+  "AllContents": "All contents",
   "Resume": "Resume",
   "VeepletConfiguration": "Veeplet Configuration",
   "Configure": "Configure",
