--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -156,7 +156,8 @@
   "EnterText": "Entrer le texte à utiliser",
   "EnterUrl": "Entrer l'Url à visiter",
   "ChooseFile": "Choisir le fichier à retranscrire",
-  "RecentActivity": "Activité récente",
+  "RecentActivities": "Activités récentes",
+  "AllContents": "Tous les contenus",
   "Resume": "Continuer",
   "VeepletConfiguration": "Configuration de la veeplet",
   "Configure": "Configurer",
