Fix(#41): Metadata are injected into the final PDF

--- a/front-end/public/locales/en/translationPDFExportForm.json
+++ b/front-end/public/locales/en/translationPDFExportForm.json
@@ -1,4 +1,6 @@
 {
+  "SelectOneItem": "You have to select at least one item",
+
   "titleLabel": "Titre",
   "titlePlaceHolder": "",
   "titleDesc": "",
@@ -14,6 +16,9 @@
   "authorLabel": "Auteur",
   "authorPlaceHolder": "",
   "authorDesc": "",
+
+  "DisplayOptionsLabel": "Display options",
+  "DisplayOptionsDesc": "Select options you want to enable",
 
   "displayHeaderLabel": "Afficher en-tête",
   "displayHeaderPlaceHolder": "",
