--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -304,6 +304,9 @@
 
   "Of": "de",
 
+  "DataUpdated": "Les données ont été mises à jour",
+  "DefaultVersionNumber": "1.0.0",
+
   "Stop": "Stop"
 
 }
