--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -304,6 +304,10 @@
   "DataUpdated": "Data have been updated",
   "DefaultVersionNumber": "1.0.0",
 
+  "NormalUser": "Normal usage",
+  "AdvancedUser": "Advanced usage",
+  "ExpertUser": "Expert usage",
+
   "Stop": "Stop"
 
 }
