--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -307,6 +307,10 @@
   "DataUpdated": "Les données ont été mises à jour",
   "DefaultVersionNumber": "1.0.0",
 
+  "NormalUser": "Affichage normal",
+  "AdvancedUser": "Affichage avancé",
+  "ExpertUser": "Affichage expert",
+
   "Stop": "Stop"
 
 }
