Fix(#61): Sources panel added. Only one source is allowed for the moment

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -308,6 +308,8 @@
   "AdvancedUser": "Advanced usage",
   "ExpertUser": "Expert usage",
 
+  "NotAvailableData": "Data not available",
+
   "Stop": "Stop"
 
 }
