--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -16,10 +16,13 @@ last_update:
   author: Jean-Christophe Kermagoret
 ---
 
-# Veep.AI is an Education and Execution Platform for AI
+# Veep.AI is THE Education and Execution Platform for AI
 
 :::info
-Veep is for people who believe that AI increases productivity so much that not using it is unimaginable.
+Veep is a SaaS app that enables gradual deployment of AI in your company, service by service. It automates AI prompts, to gain productivity or create new value, because chat-based prompt engineering can't scale.
+
+It is open source so you can use your own architecture if you prefer.
+
 :::
 
 ## Teaser
