Details screen is blank because of a non-existant graphql object with Name tvfSubtitle

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -188,7 +188,7 @@
   "Prompt": "Prompt(s)",
   "CopiedToClipboard": "Copied to clipboard!",
   "Copy+C": "Copy content with Ctrl+C (windows) or ⌘+C (Mac)",
-  "VeepVeeplets": "Default document templtes",
+  "VeepVeeplets": "Default document templates",
   "MyVeeplets": "My document templates",
   "DocModels": "Doc templates",
   "FrequencyPenalty": "Freq. pen.",
