--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -174,6 +174,7 @@
   "PDFDocumentSubtitle": "Subtitle",
   "DocumentFormatSelector": "Format",
   "OrgName": "Organization name",
+  "OrganizationName": "Organization",
   "AuthorName": "Author",
   "Body": "Main part",
   "IconName": "Icon",
