--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -174,6 +174,7 @@
   "PDFDocumentSubtitle": "Sous-titre",
   "DocumentFormatSelector": "Format",
   "OrgName": "Nom de l'organisation",
+  "OrganizationName": "Organisation",
   "AuthorName": "Auteur",
   "Body": "Partie principale",
   "IconName": "Icône",
