Fix(#125): Minor updates

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -29,8 +29,8 @@
     "Credits": "Credits",
     "Editor": "Prompt",
     "Profile": "Profile",
-    "UserPreferences": "User Preferences",
-    "ApplicationPreferences": "Application Preferences",
+    "UserParameters": "User Parameters",
+    "AppParameters": "App. Parameters",
     "About": "About...",
 
     "Exit": "Exit",
@@ -141,10 +141,10 @@
   "CreditsSubtitle": "Displays your credits consumption and the opportunity to choose the plan that suits your needs.",
   "ProfileTitle": "Profile",
   "ProfileSubtitle": "Displays your profile informations.",
-  "UserPreferencesTitle": "User Preferences",
-  "UserPreferencesSubtitle": "Displays your user preferences.",
-  "AppPreferencesTitle": "App Preferences",
-  "AppPreferencesSubtitle": "Displays the application preferences.",
+  "UserParametersTitle": "User Preferences",
+  "UserParametersSubtitle": "Displays your user preferences.",
+  "AppParametersTitle": "App. Preferences",
+  "AppParametersSubtitle": "Displays the application preferences.",
   "AboutTitle": "About",
   "AboutSubtitle": "Displays informations about the Veep.AI app and use conditions.",
   "MainContent": "Aggregated content",
