--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -29,8 +29,8 @@
     "Credits": "Crédits",
     "Editor": "Prompt",
     "Profile": "Profil",
-    "UserPreferences": "Préférences utilisateur",
-    "ApplicationPreferences": "Préférences de l'application",
+    "UserParameters": "Préférences utilisateur",
+    "ApplicationParameters": "Préférences de l'application",
     "About": "À propos de...",
 
     "Exit": "Exit",
@@ -142,10 +142,10 @@
   "CreditsSubtitle": "Affiche le nombre de crédits consommés  et la possibilité  de choisir un autre plan d'abonnement.",
   "ProfileTitle": "Profil",
   "ProfileSubtitle": "Affiche les informations vous concernant.",
-  "UserPreferencesTitle": "Préférences utilisateurs",
-  "UserPreferencesSubtitle": "Affiche vos préférences. Vous pouvez les modifier.",
-  "AppPreferencesTitle": "Préférences de l'application",
-  "AppPreferencesSubtitle": "Affiche les préférences de l'application correspondant à votre marque. Mettez le logo de votre société et définissez votre catalogue de veeplets.",
+  "UserParametersTitle": "Préférences utilisateurs",
+  "UserParametersSubtitle": "Affiche vos préférences. Vous pouvez les modifier.",
+  "AppParametersTitle": "Préférences de l'application",
+  "AppParametersSubtitle": "Affiche les préférences de l'application correspondant à votre marque. Mettez le logo de votre société et définissez votre catalogue de veeplets.",
   "AboutTitle": "À propos",
   "AboutSubtitle": "Affiche des informations sur l'application et nos conditions d'utilisation.",
   "MainContent": "Contenu agrégé",
