Fix(#125): Minor updates

--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -37,7 +37,7 @@
     "Save": "Enregistrer",
 
     "New": "Nouveau",
-    "Back": "Accueil",
+    "Back": "◄ Accueil",
     "Cancel": "Annuler",
 
     "General": "Général"
