--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -37,7 +37,7 @@
     "Save": "Save",
 
     "New": "New",
-    "Back": "Home",
+    "Back": "◄ Home",
     "Cancel": "Cancel",
 
     "General": "General"
