Fix(#144): configuration fixed

--- a/front-end/public/locales/en/translationForm.json
+++ b/front-end/public/locales/en/translationForm.json
@@ -6,7 +6,7 @@
 
   "valuesLabel": "Your Values",
   "valuesDesc": "Indicate in one sentence what is essential for your entity, your project",
-  "valuesPlaceHolder": "The love of wood of the men and women of the company",
+  "valuesPlaceHolder": "The men and women of the company",
 
   "historyLabel": "Your history",
   "historyDesc": "Tell the history about your project, your company...",
