--- a/front-end/public/locales/fr/translationForm.json
+++ b/front-end/public/locales/fr/translationForm.json
@@ -6,7 +6,7 @@
 
   "valuesLabel": "Vos valeurs",
   "valuesDesc": "Indiquez en une phrase ce qui est essentiel pour votre entité, votre projet",
-  "valuesPlaceHolder": "L'amour du bois des hommes et des femmes de l'entreprise",
+  "valuesPlaceHolder": "Les hommes et les femmes de l'entreprise",
 
   "historyLabel": "Votre histoire",
   "historyDesc": "Racontez l'histoire de votre projet, votre société",
