Fix(#161): PDF viewer has been integrated in SocialNetwork Component.

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -329,6 +329,8 @@
 
   "DefaultLIBaseline": "This is a default baseline just to give you the feeling like it will be on real social network",
 
+  "EnterInEditAndPreviewMode": "Edit and preview",
+
   "Stop": "Stop"
 
 }
