--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -332,6 +332,8 @@
 
   "DefaultLIBaseline": "Ceci est une baseline par défaut pour que vous voyiez à quoi cela ressemblera sur le vrai réseau social",
 
+  "EnterInEditAndPreviewMode": "Editer et prévisualiser",
+  
   "Stop": "Stop"
 
 }
